maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:40: error: value =! is not a member of Boolean
  free=!estFaceMur()
      ^PledgeMaze:43: error: not found: value set
  set
  ^